# simple-mlops

./: .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: mlops.yaml
data/: iris.csv.dvc
deployment/: .env.example  Dockerfile.mlflow  compose.yaml  prebucket.sh
deployment/nginx/: nginx.conf
mlruns/0/: meta.yaml
mlruns/0/92590149f0144c888516c2e5441af4f6/: meta.yaml
mlruns/0/92590149f0144c888516c2e5441af4f6/metrics/: accuracy  f1_weighted  precision_weighted  recall_weighted  roc_auc_weighted
mlruns/0/92590149f0144c888516c2e5441af4f6/tags/: mlflow.runName
mlruns/0/93f85428c043425392e974f7e923def0/: meta.yaml
mlruns/0/93f85428c043425392e974f7e923def0/metrics/: accuracy
mlruns/0/93f85428c043425392e974f7e923def0/tags/: mlflow.runName
mlruns/0/a00b4e532c024208b48e24b90190a103/: meta.yaml
mlruns/0/a00b4e532c024208b48e24b90190a103/metrics/: accuracy
mlruns/0/a00b4e532c024208b48e24b90190a103/tags/: mlflow.runName
mlruns/0/c4affcd23ecb415eb5f16f81005608ed/: meta.yaml
mlruns/0/c4affcd23ecb415eb5f16f81005608ed/metrics/: accuracy
mlruns/0/c4affcd23ecb415eb5f16f81005608ed/tags/: mlflow.runName  mlflow.source.git.commit
mlruns/0/c5128eb8b32c4b119fe7ef695d50e03c/: meta.yaml
mlruns/0/d7ce309d287640a5b3e9a08a84678380/: meta.yaml
mlruns/0/feb6d223876b4aaeb7ea695699034707/: meta.yaml
src/: __init__.py  app.py  preprocessing.py  request.py  train.py
tests/: __init__.py  test_api.py  test_data_validation.py  test_model.py
(+21 files in other folders)
