[project]
name = "simple-mlops-deployment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dvc[ssh]>=3.62.0",
    "dvc-gdrive>=3.0.1",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "mlflow>=3.3.2",
    "pandas>=2.3.2",
    "pytest>=8.4.1",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "uvicorn>=0.35.0",
]
